2008-08-28  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari800.java: gain applet focus
* sio.h: remove Id tag
* xep80.c: XEP80_BlitGraphChar(int x, int y), add int before x and y
* pokeysnd.[ch], mzpokeysnd.c: SAMPBUF_MAX -> POKEYSND_SAMPBUF_MAX
* mzpokeysnd.c, pokeymix.inc: changed NONLINEAR_MIXING to use a better
  method, pokeymix.inc is no longer needed.


2008-08-22  Petr Stehlik  <pstehlik@sophics.cz>
* atari_svgalib.c, configure.ac, Makefile.in, DOC/*: SVGAlib target dropped
  definitely. SVGAlib is long time dead and running programs setuid 'root'
  is so dangerous. Use/improve the SDL target instead!


2008-07-12  Perry McFarlane  <perry_m@fastmail.fm>
* most files: finished renaming globals.  New files: akey.h, (AKEY_*),
esc.[ch](patches), afile.[ch](file loading), cfg.[ch] (configuration),
ui_basic.h


2008-07-03  Perry McFarlane  <perry_m@fastmail.fm>
* remez.[ch], mzpokeysnd.c: rename Remez_, remez -> Remez_CreateFilter.
* devices.[ch], atari.c, binload.c, rdevice.c, ui.c: rename Devices_, Device_
-> Devices.
* cpu.[ch], antic.c, atari.c, binload.c, cassette.c, devices.c,
input.c, monitor.c, pbi.c, pbi_bb.c, pbi_mio.c, pokey.c, rdevice.c, sio.c,
ui.c: rename CPU_.
* sio.[ch], atari.c, atari_x11.c, binload.c, pbi_xld.c, pia.c, pokey.c,
screen.c, ui.c: rename SIO_


2008-07-02  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari_javanvm.c: compile without SOUND
* atari_sdl.c: name changes
* sndsave.[ch], atari.c, pokeysnd.c, ui.c: rename externals with SndSave_
* statesav.[ch], antic.c, atari.c, cartridge.c, cpu.c, dc/atari_dc.c, gtia.c,
memory.c, pbi.c, pbi_bb.c, pbi_mio.c, pbi_xld.c, pia.c, pokey.c, sio.c, ui.c,
xep80.c: rename externals with StateSav_
* log.[ch], antic.c, atari.c, atari_basic.c, atari_curses.c, atari_falcon.c,
atari_ntsc.c, atari_ps2.c, atari_sdl.c, atari_svgalib.c, atari_x11.c,
binload.c, cassette.c, colours.c, devices.c, dos/atari_vga.c, dos/dos_sb.c,
dos/sound_dos.c, input.c, javanvm/atari_javanvm.c, memory.c, pbi_bb.c,